--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     testImplementation "org.mockito:mockito-core:3.3.3"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "org.koin:koin-test:2.2.1"
+    testImplementation 'io.mockk:mockk:1.11.0'
 }
